Add random color generator

--- a/195.html
+++ b/195.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
-    <div>
-      Play Again
+    <div id="navbar">
+      <button id="reset"><span>New Colors</span></button>
       <span id="correct"></span>
     </div>
 
