Add easy and hard game modes

--- a/195.html
+++ b/195.html
@@ -17,6 +17,8 @@
     <div id="navbar">
       <button id="reset"><span>New Colors</span></button>
       <span id="correct"></span>
+      <button id="easyButton">Easy</button>
+      <button id="hardButton" class="selected">Hard</button>
     </div>
 
     <div id="container">
