--- a/195.html
+++ b/195.html
@@ -13,7 +13,13 @@
     <link rel="stylesheet" href="195.css">
   </head>
   <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>
+      The Great 
+      <br>
+      <span id="colorDisplay">RGB</span> 
+      <br>
+      Color Game
+    </h1>
     <div id="navbar">
       <button id="reset"><span>New Colors</span></button>
       <span id="correct"></span>
