Add bootstrap grid with pictures

--- a/82.html
+++ b/82.html
@@ -40,8 +40,27 @@
         <h1>The Image Gallery</h1>
         <p>A bunch of Beautiful Images that I collect</p>
       </div>
+   
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="thumbnail">
+            <img src="http://itstodiefor.ca/slir/w736/media/East-Cafe.jpg">
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="thumbnail">
+            <img src="http://itstodiefor.ca/slir/w736/media/East-Cafe.jpg">
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="thumbnail">
+            <img src="http://itstodiefor.ca/slir/w736/media/East-Cafe.jpg">
+          </div>
+        </div>
+      </div>
+   
     </div>
- 
 
 
 
