--- a/Museum of Candy/index.html
+++ b/Museum of Candy/index.html
@@ -12,9 +12,9 @@
     </head>
 
     <body>
-        <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md">
+        <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md fixed-top">
             <a href="" class="navbar-brand">CANDY</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navLinks">
