--- a/Museum of Candy/index.html
+++ b/Museum of Candy/index.html
@@ -31,7 +31,26 @@
                 </ul>
             </div>
         </nav>
+        <section class="container-fluid px-0">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div id="headingGroup" class="text-white text-center d-none d-lg-block">
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
 
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="images/hand2.png" alt="">
+                </div>
+
+            </div>
+        </section>
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" async defer></script>
