Styled second set of images

--- a/Museum of Candy/index.html
+++ b/Museum of Candy/index.html
@@ -51,20 +51,18 @@
             </div>
         </section>
 
-        <section class="container-fluid px-0 py-5">
+        <section class="container-fluid px-0 pt-5">
             <div class="row align-items-center">
-                <div class="col-lg-6">
+                <div class="col-md-6 order-2 order-md-1">
                     <img class="img-fluid" src="images/milk.png" alt="">
                 </div>
-                <div class="col-lg-6">
-                    <div id="headingGroup" class="text-white text-center d-none d-lg-block">
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+                <div class="col-md-6 order-1 order-md-2">
+                    <div class="row justify-content-center">   
+                        <div id="headingGroup" class="text-white text-center col-10 col-lg-8">
+                            <h1 class="secondText">MUSEUM of CANDY</h1>
+                            <img src="images/lolli_icon.png" alt="" class="d-none d-xl-inline">
+                            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero suscipit eaque laborum saepe illo asperiores incidunt ad omnis laboriosam eius! Fugit quae eos atque incidunt dolore assumenda error ab rem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero suscipit eaque laborum saepe illo asperiores incidunt ad omnis laboriosam eius! Fugit quae eos atque incidunt dolore assumenda error ab rem.</p>
+                        </div>
                     </div>
                 </div>
             </div>
