--- a/Museum of Candy/index.html
+++ b/Museum of Candy/index.html
@@ -54,12 +54,12 @@
         <section class="container-fluid px-0 pt-5">
             <div class="row align-items-center">
                 <div class="col-md-6 order-2 order-md-1">
-                    <img class="img-fluid" src="images/milk.png" alt="">
+                    <img class="img-fluid" src="images/milk.png">
                 </div>
                 <div class="col-md-6 order-1 order-md-2">
                     <div class="row justify-content-center">   
                         <div id="headingGroup" class="text-white text-center col-10 col-lg-8">
-                            <h1 class="secondText">MUSEUM of CANDY</h1>
+                            <h1 class="secondText">DONUTS & MILK</h1>
                             <img src="images/lolli_icon.png" alt="" class="d-none d-xl-inline">
                             <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero suscipit eaque laborum saepe illo asperiores incidunt ad omnis laboriosam eius! Fugit quae eos atque incidunt dolore assumenda error ab rem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero suscipit eaque laborum saepe illo asperiores incidunt ad omnis laboriosam eius! Fugit quae eos atque incidunt dolore assumenda error ab rem.</p>
                         </div>
